# scrape-amazon

./: .gitignore  B078BNQ318.csv  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: main.yml
scrape_amazon/: cli.py  scraper.py
scrape_amazon/util/: scrape.py  urlFunctions.py
scrape_amazon_reviews/: __init__.py  cli.py  scraper.py
scrape_amazon_reviews/util/: scrape.py  urlFunctions.py
