[metadata]
name = scrape_amazon
version = 0.1.8
description = Scrape Amazon Reviews smoothly.
license = MIT
author = Parth Maniar
author_email = officialparthmaniar@gmail.com
url = https://github.com/officialpm/scrape-amazon
description-file = README.md
download_urls = https://pypi.org/project/scrape-amazon
project_urls =
	Documentation = https://github.com/officialpm/scrape-amazon
	Code = https://github.com/officialpm/scrape-amazon
	Issue tracker = https://github.com/officialpm/scrape-amazon/issues
classifiers =
	Operating System :: OS Independent
    Intended Audience :: Developers
    Topic :: Utilities
    Natural Language :: English
	Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only

[mypy]
disallow_untyped_defs = True
disallow_untyped_calls = True
disallow_incomplete_defs = True
disallow_untyped_decorators = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_return_any = True
warn_unreachable = True
pretty = True
